# vulkan-gpu-physics

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  CMakeLists_test.txt  INFO.md  MANAGER_ARCHITECTURE.md  README.md  main_cpu_only  test-titanium-physics  test_titanium_physics
.github/: copilot-instructions.md
.github/workflows/: vulkan-ubuntu.yml  vulkan.yml
docs/: CPUPhysicsInterfaces.md  CpuEngineComponents.md  GPUPhysicsECSUsage.md  GeneralPhysicsEngine.md  GpuEngineComponents.md  TITANIUM_PHYSICS.md
docs/CpuEngine/: CpuEngine.md  CpuEngineComponents.md
docs/GpuEngine/: GpuEngine.md
docs/TestSystem/: TestSystem.md
src/: main.cpp  main_cpu_only.cpp  physics_engine.cpp  physics_engine.h  test_physics_systems.cpp  test_runner.cpp  test_titanium_physics.cpp
src/PhysicsEngine/: PhysicsEngine.cpp
src/PhysicsEngine/CPUPhysicsEngine/: CPUPhysicsEngine.h  components.h
src/PhysicsEngine/CPUPhysicsEngine/components/: BoxColliderComponent.h  PhysicsComponent.h  RigidBodyComponent.h  TransformComponent.h
src/PhysicsEngine/CPUPhysicsEngine/concrete/: ConcreteComponents.cpp  ConcreteComponents.h  ConcreteEntity.cpp  ConcreteEntity.h
src/PhysicsEngine/CPUPhysicsEngine/entities/: RigidBody.h
src/PhysicsEngine/CPUPhysicsEngine/factories/: RigidbodyComponentFactory.cpp  RigidbodyEntityFactory.cpp  RigidbodyEntityFactory.h
src/PhysicsEngine/CPUPhysicsEngine/factories/components/: RigidbodyComponentFactory.cpp  RigidbodyComponentFactory.h
src/PhysicsEngine/CPUPhysicsEngine/factories/entities/: RigidbodyEntityFactory.cpp  RigidbodyEntityFactory.h
src/PhysicsEngine/CPUPhysicsEngine/interfaces/: CPUPhysicsComponent.h  CPUPhysicsEntity.h  CPUPhysicsSystem.h  interfaces.h
src/PhysicsEngine/CPUPhysicsEngine/managers/ECSManager/: ECSManager.cpp  ECSManager.h
src/PhysicsEngine/CPUPhysicsEngine/rigidbody/: RigidBody.h  RigidBodySystem.cpp
src/PhysicsEngine/CPUPhysicsEngine/systems/: BaseCPUPhysicsSystem.cpp  BaseCPUPhysicsSystem.h  CpuPhysicsCollisionSystem.cpp  CpuPhysicsCollisionSystem.h  EnhancedCPUPhysicsCollisionSystem.cpp  EnhancedCPUPhysicsCollisionSystem.h
src/PhysicsEngine/CPUPhysicsEngine/tests/: interface_demo.cpp
src/PhysicsEngine/GPUPhysicsEngine/: GPUPhysicsEngine.h
src/PhysicsEngine/GPUPhysicsEngine/components/: ParticleComponent.h
src/PhysicsEngine/GPUPhysicsEngine/systems/: ParticlePhysicsSystem.cpp  ParticlePhysicsSystem.h
src/collision/: CollisionSystem.cpp  CollisionSystem.h  Contact.h
src/components/physics/: PhysicsEngine.cpp
src/components/rigidbody/: RigidBodySystem.cpp  RigidBodySystem.h
src/components/tests/: CollisionTests.h  LoggerTests.h  README.md  RigidBodyTests.h  TestManager.h  TestResult.h  test_physics_systems.cpp  test_runner.cpp
src/components/tests/framework/: Test.h
src/components/tests/tests/: CollisionTests.h  LoggerTests.h  RigidBodyTests.h  test_physics_systems.cpp  test_runner.cpp
src/components/vulkan/: VulkanCommandPool.h  VulkanInstance.cpp
src/components/vulkan/physics/: BufferManager.cpp  BufferManager.h
src/cpu_physics/: CPUPhysicsEngine.h  CPUPhysicsSystem.cpp  CPUPhysicsSystem.h  components.h
src/cpu_physics/factories/: rigidbody_component_factory.h  rigidbody_entity_factory.h
src/cpu_physics/managers/: ecs_manager.cpp
src/cpu_physics/managers/ecs_manager/: ecs_manager.h
src/cpu_physics/systems/: cpu_physics_collision_system.h
src/factories/: RigidBodyFactory.h
src/gpu_physics/: GPUPhysicsEngine.cpp  GPUPhysicsSystem.cpp  GPUPhysicsSystem.h
src/gpu_physics/components/vulkan/: VulkanContext.h
src/gpu_physics/managers/physicsmanager/: GPUPhysicsManager.cpp
src/gpu_physics/managers/vulkanmanager/: VulkanManager.cpp
src/managers/: BaseManager.h
src/managers/collisionmanager/: CollisionManager.cpp  CollisionManager.h  Contact.h
src/managers/collisionmanager/workers/: BroadPhaseWorker.h  ContactResolverWorker.h  DetectCollisionWorker.cpp  DetectCollisionWorker.h  GPUBufferWorker.cpp
src/managers/logmanager/: Logger.h
src/managers/particlemanager/: ParticleManager.cpp  ParticleManager.h
src/managers/physicsmanager/: LayerSystem.cpp  LayerSystem.h  PhysicsManager.cpp  PhysicsManager.h
src/managers/physicsmanager/rigidbodies/: RigidBodyFactory.cpp  RigidBodyFactory.h
src/managers/physicsmanager/workers/: PhysicsLayerWorker.h  RigidBodyWorker.cpp  RigidBodyWorker.h
src/managers/shadermanager/: ShaderManager.cpp  ShaderManager.h
src/managers/testmanager/: TestManager.cpp  TestManager.h
src/managers/testmanager/tests/: CollisionTests.h  LoggerTests.h  RigidBodyTests.h  test_physics_systems.cpp  test_runner.cpp
src/managers/vulkanmanager/: VulkanManager.cpp  VulkanManager.h
src/particles/: ParticleSystem.cpp  ParticleSystem.h
src/physics/: Particle.h  PhysicsEngine.cpp  PhysicsEngine.h  VulkanContext.h  VulkanContext_old.cpp  VulkanPhysics.cpp  VulkanPhysics.h
src/physics/components/: BufferManager.cpp  ParticleSystem.cpp  ParticleSystem.h
src/physics_engine/: physics_engine.cpp
src/physics_engine/cpu_physics_engine/: CPUPhysicsEngine.cpp  CPUPhysicsEngine.h
src/physics_engine/cpu_physics_engine/factories/: rigidbody_component_factory.cpp  rigidbody_entity_factory.cpp  rigidbody_entity_factory.h
src/physics_engine/cpu_physics_engine/rigidbody/: RigidBodySystem.cpp  RigidBodySystem.h
src/physics_engine/cpu_physics_engine/systems/: cpu_physics_collision_system.cpp
src/physics_engine/gpu_physics_engine/: GPUPhysicsEngine.h
src/physics_engine/managers/logmanager/: Logger.cpp
src/rigidbody/: RigidBody.h  RigidBodySystem.cpp
src/shaders/: particle_physics.comp
src/tests/: test.cpp
src/tests/components/tests/: TestManager.h
src/vulkan/: VulkanCommandPool.cpp  VulkanContext.cpp
test_build/: CMakeLists.txt  physics-tests
test_build/Testing/Temporary/: CTestCostData.txt
tests/: CollisionTests.h  CollisionTestsSimple.h  LoggerTests.h  LoggerTestsSimple.h  RigidBodyTests.h  RigidBodyTestsSimple.h  TestCommon.h  test_physics_systems.cpp  test_runner.cpp  test_runner_simple.cpp
tests/framework/: TestManager.cpp  TestManager.h
(+44 files in other folders)
